Fixed a vertical alignment problem in the picklist

--- a/src/styles/richfaces/list-mixins.less
+++ b/src/styles/richfaces/list-mixins.less
@@ -22,7 +22,6 @@
     }
 
     .listBox {
-        vertical-align: middle;
         display: table-cell;
         overflow: auto;
         overflow-x: hidden;
