--- a/src/styles/richfaces/variables.less
+++ b/src/styles/richfaces/variables.less
@@ -1,9 +1,9 @@
 @import "bootstrap/less/variables";
 
-@size-clickable: 2.5em;
+@size-clickable: 2.0em;
 @size-touchable: 3.0em;
 
-@list-min-height: 2.5em;
+@list-min-height: @size-clickable * 4 + 2em;
 @list-button-padding: 4px;
 @list-item-bg: @gray-lighter;
 @list-item-color: @text-color;
